[gd_scene load_steps=4 format=2]

[ext_resource path="res://ModeBattle/PlayerBattler/DataBlock.gd" type="Script" id=1]
[ext_resource path="res://Assetts3.0/OtherUI/RootTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assetts3.0/OtherUI/BarTheme.tres" type="Theme" id=3]

[node name="Data" type="Control"]
margin_top = -75.0
margin_right = 40.0
margin_bottom = -35.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusEffects" type="HBoxContainer" parent="."]
margin_left = -80.0
margin_top = -77.0
margin_right = -38.0
margin_bottom = -61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_top = 1.875
anchor_bottom = 1.875
margin_left = -64.0
margin_right = 52.0
margin_bottom = 24.0
text = "{LABEL}"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
light_mask = -2147483647
anchor_top = 1.9
anchor_bottom = 1.9
margin_left = -48.0
margin_top = -196.0
margin_right = 52.0
margin_bottom = -176.0
theme = ExtResource( 3 )
percent_visible = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HealthAmount" type="Label" parent="HealthBar"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "XX / XX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChargeBar" type="ProgressBar" parent="."]
anchor_top = 1.875
anchor_bottom = 1.875
margin_left = -48.0
margin_top = -175.0
margin_right = 52.0
margin_bottom = -155.0
theme = ExtResource( 3 )
percent_visible = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ChargeAmount" type="Label" parent="ChargeBar"]
self_modulate = Color( 0.0431373, 0.00784314, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "XX / XX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
